--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
+    "@napi-rs/canvas": "^0.1.70",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.8.1",
     "@radix-ui/react-accordion": "^1.2.11",
