--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
-  "buildCommand": "prisma generate && npm run build",
-  "installCommand": "npm install && prisma generate"
+  "buildCommand": "npx prisma generate && npm run build",
+  "installCommand": "npm install && npx prisma generate"
 }
