fix: remove all development tools and submodules causing deployment issues
- Remove archive/saasy-land submodule (missing .gitmodules configuration)
- Remove BMAD-METHOD submodule (already deleted)
- Remove .taskmaster/ directory and config (TaskMaster AI development tool)
- Remove testdriver/ directory (TestDriverAI configuration)
- Update .gitignore to prevent future tracking of development tools
- Fixes Git submodule errors during Netlify deployment

--- a/.gitignore
+++ b/.gitignore
@@ -64,4 +64,17 @@ Icon?
 # -------------------------
 .vercel
 
+# -------------------------
+# Development Tools
+# -------------------------
+.taskmaster/
+.taskmasterconfig
+testdriver/
+BMAD-METHOD/
+
+# -------------------------
+# Archive/Legacy Code
+# -------------------------
+archive/saasy-land/
+
 .prisma/client
