--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,8 @@
 [build]
   command = "npm ci && npx prisma generate && npm run build"
-  publish = "out"
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
 
 [build.environment]
   NODE_VERSION = "18"
