--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
     "@eslint/eslintrc": "^3",
+    "@netlify/plugin-nextjs": "^5.11.2",
     "@playwright/test": "^1.52.0",
     "@types/cors": "^2.8.18",
     "@types/node": "^20",
