--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,11 @@
 [build]
   command = "npm ci && npx prisma generate && npm run build"
+  publish = ".next"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
 [build.environment]
   NODE_VERSION = "18"
+  SKIP_REDIS = "true"
+  REDIS_DISABLED = "true"
