--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "npx prisma generate && next build",
+    "build": "OTEL_SDK_DISABLED=true npx prisma generate && OTEL_SDK_DISABLED=true next build",
     "build:no-lint": "next build --no-lint",
     "build:watch": "nodemon --watch src --ext ts,tsx,js,jsx --exec \"npm run build\"",
     "type-check": "tsc --noEmit",
@@ -51,6 +51,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@napi-rs/canvas": "^0.1.70",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@opentelemetry/instrumentation": "^0.202.0",
     "@prisma/client": "^6.8.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
