--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-email/components": "^0.0.41",
+    "@react-email/render": "^1.1.2",
     "@sentry/nextjs": "^8.0.0",
     "@stripe/stripe-js": "^7.3.0",
     "@tailwindcss/line-clamp": "^0.4.4",
