--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@react-email/render": "^1.1.2",
     "@sentry/nextjs": "^8.0.0",
     "@stripe/stripe-js": "^7.3.0",
+    "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/ioredis": "^4.28.10",
     "@types/validator": "^13.15.1",
