--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@stripe/stripe-js": "^7.3.0",
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@tsparticles/confetti": "^3.8.1",
     "@types/ioredis": "^4.28.10",
     "@types/validator": "^13.15.1",
     "@upstash/ratelimit": "^2.0.5",
@@ -128,7 +129,6 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "testdriverai": "^5.7.42",
-    "tsparticles-confetti": "^2.12.0",
     "validator": "^13.15.0",
     "web-vitals": "^5.0.1",
     "zod": "^3.25.28"
