Implement job posting checkout system with Stripe integration
- Add JobPostingPurchase and JobPostingCredit database models
- Create job posting checkout API with tier and addon support
- Implement JobPostingCreditsService for credit management
- Add JobPostingCheckout React component with interactive UI
- Update Stripe webhook to handle job posting purchases
- Integrate credit system with job posting flow
- Add credits display to employer dashboard
- Support one-time payments for job posting packages
- Include bundle pricing and addon combinations

--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,17 @@ STRIPE_PUBLISHABLE_KEY="pk_test_your_stripe_publishable_key"
 STRIPE_SECRET_KEY="sk_test_your_stripe_secret_key"
 STRIPE_WEBHOOK_SECRET="whsec_your_stripe_webhook_secret"
 
+# Job Posting Tiers (One-time payments)
+STRIPE_PRICE_STARTER="price_starter_tier_id"      # $99 - 1 job post
+STRIPE_PRICE_STANDARD="price_standard_tier_id"    # $199 - 3 job posts
+STRIPE_PRICE_PRO="price_pro_tier_id"              # $350 - 10 job posts
+
+# Job Posting Add-ons (One-time payments)
+STRIPE_PRICE_FEATURED="price_featured_post_id"    # $49 - Featured Post
+STRIPE_PRICE_GRAPHIC="price_social_graphic_id"    # $49 - Social Post Graphic
+STRIPE_PRICE_REPOST="price_repost_job_id"         # $29 - Repost Job
+STRIPE_PRICE_BOOST_PACK="price_bundle_id"         # $85 - Feature + Social Bundle
+
 # =============================================================================
 # ANALYTICS & MONITORING
 # =============================================================================
