Implement reposting strategy with individual credit packs
MAJOR UPDATES:
- Remove repost addon (9) in favor of individual credit purchases
- Add credit packs: 9 for 1 credit, 49 for 5 credits (16% discount)
- Update credit expiration to 60 days (allows reasonable rollover)
- Update starter tier to 2 job posts (was 1)

NEW FEATURES:
- Individual credit pack purchases via /api/job-posting/buy-credits
- Job reposting functionality via /api/jobs/[id]/repost
- BuyCreditsModal component for purchasing individual credits
- Enhanced JobPostingCheckout with 'Use Existing Credits' option
- Better visual segmentation with numbered steps

REPOSTING FLOW:
- Expired jobs show 'Repost using credit' if user has credits
- Show 'Buy 1 credit for 9' if no credits available
- Reposting extends job for 30 more days using existing credit

CREDIT SYSTEM:
- 60-day expiration prevents month-to-month rollover
- Bulk discount: 5 credits for 49 (save 6)
- Fair pricing: 9 for repost vs 9 extension
- All one-time payments, no subscriptions

CONFIGURATION:
- Updated Stripe config for credit packs
- Enhanced webhook handling for credit pack purchases
- Updated debug endpoint for new price IDs
- Environment variables: STRIPE_PRICE_CREDIT_1, STRIPE_PRICE_CREDIT_5

--- a/.env.example
+++ b/.env.example
@@ -56,8 +56,11 @@ STRIPE_PRICE_PRO="price_pro_tier_id"              # $350 - 10 job posts
 # Job Posting Add-ons (One-time payments)
 STRIPE_PRICE_FEATURED="price_featured_post_id"    # $49 - Featured Post
 STRIPE_PRICE_GRAPHIC="price_social_graphic_id"    # $49 - Social Post Graphic
-STRIPE_PRICE_REPOST="price_repost_job_id"         # $29 - Repost Job
 STRIPE_PRICE_BOOST_PACK="price_bundle_id"         # $85 - Feature + Social Bundle
+
+# Individual Credit Packs (One-time payments)
+STRIPE_PRICE_CREDIT_1="price_credit_1_id"         # $59 - 1 Job Credit
+STRIPE_PRICE_CREDIT_5="price_credit_5_id"         # $249 - 5 Job Credits
 
 # =============================================================================
 # ANALYTICS & MONITORING
