--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm ci && npx prisma generate && npm run build"
+  command = "npm ci && npx prisma generate && npm run build:no-lint"
   publish = ".next"
 
 [[plugins]]
@@ -9,3 +9,7 @@
   NODE_VERSION = "18"
   SKIP_REDIS = "true"
   REDIS_DISABLED = "true"
+  OTEL_SDK_DISABLED = "true"
+  NEXT_TELEMETRY_DISABLED = "1"
+  SKIP_ENV_VALIDATION = "true"
+  NODE_ENV = "production"
