Fix TypeScript build dependencies and Prisma gitignore pattern
- Move typescript, @types/react, @types/react-dom, @types/node to dependencies
- These packages are required during build process, not just development
- Update Netlify build command to include dev dependencies with --include=dev
- Fix .gitignore pattern for Prisma: .prisma/client → .prisma/
- Resolves 'TypeScript but do not have required packages installed' error
- Ensures TypeScript compilation and Prisma generation work properly during deployment

--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,12 @@ BMAD-METHOD/
 # -------------------------
 archive/saasy-land/
 
-.prisma/client
+# -------------------------
+# Prisma
+# -------------------------
+.prisma/
+
+# -------------------------
 # Local Netlify folder
+# -------------------------
 .netlify
