--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm ci && npx prisma generate && npm run build:no-lint"
+  command = "npm ci --include=dev && npx prisma generate && npm run build:no-lint"
   publish = ".next"
 
 [[plugins]]
