--- a/package.json
+++ b/package.json
@@ -132,6 +132,10 @@
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "testdriverai": "^5.7.42",
+    "typescript": "^5.8.3",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/node": "^20",
     "validator": "^13.15.0",
     "web-vitals": "^5.0.1",
     "zod": "^3.25.28"
@@ -145,11 +149,8 @@
     "@netlify/plugin-nextjs": "^5.11.2",
     "@playwright/test": "^1.52.0",
     "@types/cors": "^2.8.18",
-    "@types/node": "^20",
     "@types/node-cron": "^3.0.11",
     "@types/qrcode": "^1.5.5",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "@types/speakeasy": "^2.0.10",
     "cross-env": "^7.0.3",
     "eslint": "^9",
@@ -158,7 +159,6 @@
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.8.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "ts-node": "^10.9.2"
   }
 }
