fix: Resolve build failures with safe build process
- Add safe-build.js script to handle Prisma schema changes gracefully
- Update Netlify build command to use safe build process
- Add error handling for ChatHistory table not existing yet
- Prevent build failures during database schema transitions
- APIs now gracefully handle missing ChatHistory table

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm ci --include=dev && npx prisma generate && npm run build:no-lint"
+  command = "node scripts/safe-build.js"
   publish = ".next"
 
 [[plugins]]
