Enhance candidate management system with improved UX
- Fix resume auto-download issue: Replace automatic download with single download button
- Create missing job edit functionality: Add complete job editing page with form validation
- Enhance pipeline CRM: Add bulk resume download functionality with ZIP creation
- Relocate job settings: Move settings from hidden tab to accessible overview sidebar
- Add bulk download API: Server-side ZIP creation for resume downloads by stage
- Improve candidate snapshot: Remove auto-download behavior for better UX
- Update navigation: Remove redundant settings tab, consolidate into overview

--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tsparticles/confetti": "^3.8.1",
     "@types/ioredis": "^4.28.10",
+    "@types/jszip": "^3.4.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -109,6 +110,7 @@
     "dotenv": "^16.5.0",
     "framer-motion": "^12.12.1",
     "ioredis": "^5.6.1",
+    "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "mammoth": "^1.9.1",
