Update Standard Tier to provide 5 job credits
Changes:
- Updated pricing page: Standard Tier now shows '5 Job Credits per month'
- Updated Stripe configuration: jobPosts changed from 3 to 5 for standard tier
- Updated .env.example comments to reflect correct credit amounts
- Ensures consistency across pricing display and backend logic

Standard Tier now provides:
- 5 Job Credits per month (was 3)
- 99/month pricing unchanged
- All other features remain the same

--- a/.env.example
+++ b/.env.example
@@ -49,8 +49,8 @@ STRIPE_SECRET_KEY="sk_test_your_stripe_secret_key"
 STRIPE_WEBHOOK_SECRET="whsec_your_stripe_webhook_secret"
 
 # Job Posting Tiers (One-time payments)
-STRIPE_PRICE_STARTER="price_starter_tier_id"      # $99 - 1 job post
-STRIPE_PRICE_STANDARD="price_standard_tier_id"    # $199 - 3 job posts
+STRIPE_PRICE_STARTER="price_starter_tier_id"      # $99 - 2 job posts
+STRIPE_PRICE_STANDARD="price_standard_tier_id"    # $199 - 5 job posts
 STRIPE_PRICE_PRO="price_pro_tier_id"              # $350 - 10 job posts
 
 # Job Posting Add-ons (One-time payments)
