Fix Netlify functions configuration
- Added functions directory to netlify.toml
- Added functions configuration with esbuild bundler
- Fixed Stripe initialization to use constructor syntax
- Should resolve 404 errors for Netlify functions

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
   command = "node scripts/safe-build.js"
+  functions = "netlify/functions"
   publish = ".next"
 
 [[plugins]]
@@ -13,3 +14,6 @@
   NEXT_TELEMETRY_DISABLED = "1"
   SKIP_ENV_VALIDATION = "true"
   NODE_ENV = "production"
+
+[functions]
+  node_bundler = "esbuild"
