--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cleanup:test-data": "node scripts/cleanup-test-data.js"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.54.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
     "@napi-rs/canvas": "^0.1.70",
