--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "recharts": "^2.15.3",
     "resend": "^4.5.1",
     "sharp": "^0.34.2",
+    "sonner": "^2.0.5",
     "speakeasy": "^2.0.0",
     "stripe": "^18.1.1",
     "swr": "^2.3.3",
