Fix build: Remove non-existent scheduled functions plugin and Windows-incompatible claude-code package

--- a/package.json
+++ b/package.json
@@ -52,11 +52,11 @@
     "test:ai-matching": "curl -H \"Authorization: Bearer ${ADMIN_SECRET}\" \"${NEXT_PUBLIC_BASE_URL:-http://localhost:3000}/api/admin/test-ai-matching\""
   },
   "dependencies": {
-    "@anthropic-ai/claude-code": "^1.0.24",
     "@anthropic-ai/sdk": "^0.54.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
     "@napi-rs/canvas": "^0.1.70",
+    "@netlify/functions": "^4.1.5",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@opentelemetry/instrumentation": "^0.202.0",
     "@prisma/client": "^6.8.1",
