Major updates: Add social media features, AI caption generation, and enhanced job functionality
- Add AI caption generator service for social media content
- Implement social media upsell functionality and admin interface
- Add auth session API endpoints
- Update job detail components with enhanced features
- Add safe fetch utility for improved error handling
- Update admin sidebar with social media management
- Add comprehensive social media testing script
- Update package dependencies for new features

--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.15.0",
+    "canvas": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
