--- a/package.json
+++ b/package.json
@@ -53,11 +53,11 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.54.0",
+    "@auth/prisma-adapter": "^2.9.1",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
     "@napi-rs/canvas": "^0.1.70",
     "@netlify/functions": "^4.1.5",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@opentelemetry/instrumentation": "^0.202.0",
     "@prisma/client": "^6.8.1",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -119,7 +119,7 @@
     "lucide-react": "^0.511.0",
     "mammoth": "^1.9.1",
     "next": "15.3.2",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.28",
     "node-cron": "^4.0.7",
     "nodemailer": "^6.10.1",
     "openai": "^4.102.0",
