--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "dotenv": "^16.5.0",
     "framer-motion": "^12.12.1",
     "ioredis": "^5.6.1",
+    "iron-session": "^8.0.4",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
