--- a/.env.example
+++ b/.env.example
@@ -12,13 +12,13 @@
 DATABASE_URL="postgresql://username:password@host:port/database_name"
 
 # =============================================================================
-# AUTHENTICATION (NextAuth.js)
+# AUTHENTICATION (Clerk)
 # =============================================================================
-# Secret key for JWT tokens - generate a random 32+ character string
-NEXTAUTH_SECRET="your-super-secret-jwt-key-here-32-chars-minimum"
+# Clerk API keys - get these from https://dashboard.clerk.com
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_your_clerk_publishable_key_here"
+CLERK_SECRET_KEY="sk_test_your_clerk_secret_key_here"
 
 # Base URL for your application
-NEXTAUTH_URL="http://localhost:3000"
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
 # =============================================================================
@@ -168,8 +168,8 @@ SUPPORT_EMAIL="support@209.works"
 #
 # Required for basic functionality:
 # - DATABASE_URL
-# - NEXTAUTH_SECRET
-# - NEXTAUTH_URL
+# - NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
+# - CLERK_SECRET_KEY
 # - NEXT_PUBLIC_APP_URL
 #
 # Required for full functionality:
