--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.54.0",
-    "@auth/prisma-adapter": "^2.9.1",
+    "@clerk/nextjs": "^6.22.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
     "@napi-rs/canvas": "^0.1.70",
@@ -122,7 +122,6 @@
     "lucide-react": "^0.511.0",
     "mammoth": "^1.9.1",
     "next": "15.3.2",
-    "next-auth": "^5.0.0-beta.28",
     "node-cron": "^4.0.7",
     "nodemailer": "^6.10.1",
     "openai": "^4.102.0",
