--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "node scripts/safe-build.js"
+  command = "node scripts/safe-build.js || npm run build:force"
   functions = "netlify/functions"
   publish = ".next"
 
@@ -14,6 +14,9 @@
   NEXT_TELEMETRY_DISABLED = "1"
   SKIP_ENV_VALIDATION = "true"
   NODE_ENV = "production"
+  NPM_FLAGS = "--legacy-peer-deps"
+  FORCE_COLOR = "1"
+  CI = "true"
 
 [functions]
   node_bundler = "esbuild"
